creating movements page

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,11 +1,8 @@
 <ion-tabs>
-  <ion-tab label="Home" icon="home" href="/tabs/(home:home)">
-    <ion-router-outlet name="home"></ion-router-outlet>
+  <ion-tab label="Movement" icon="home" href="/tabs/(movement:movement)">
+    <ion-router-outlet name="movement"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="About" icon="information-circle" href="/tabs/(about:about)">
-    <ion-router-outlet name="about"></ion-router-outlet>
-  </ion-tab>
-  <ion-tab label="Contact" icon="contacts" href="/tabs/(contact:contact)">
-    <ion-router-outlet name="contact"></ion-router-outlet>
+  <ion-tab label="State" icon="information-circle" href="/tabs/(state:state)">
+    <ion-router-outlet name="state"></ion-router-outlet>
   </ion-tab>
 </ion-tabs>
