--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,5 +75,8 @@
   --ion-color-dark-shade: #1e1e1e;
   --ion-color-dark-tint: #383838;
 
-  red-color: 2222;
 }
+
+$red: red;
+$yellow: yellow;
+$green: green;
