--- a/src/app/state/state.page.html
+++ b/src/app/state/state.page.html
@@ -1,9 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>State</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header [title]="title"></app-header>
 <ion-content padding>
 
 </ion-content>
