--- a/src/app/shared/components/floating-button/floating-button.component.html
+++ b/src/app/shared/components/floating-button/floating-button.component.html
@@ -1,5 +1,5 @@
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-  <ion-fab-button>
+  <ion-fab-button (click)="addMovement()">
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
