--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,18 +1,26 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar *ngIf="!isSubPage">
+    <ion-buttons slot="start">
+      <ion-button>
+        <ion-icon slot="icon-only" name="contact"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-buttons slot="secondary">
-        <ion-button>
-          <ion-icon slot="icon-only" name="contact"></ion-icon>
-        </ion-button>
-        <ion-button>
+      <ion-button>
           <ion-icon slot="icon-only" name="search"></ion-icon>
         </ion-button>
-      </ion-buttons>
-      <ion-buttons slot="primary">
-        <ion-button>
-          <ion-icon name="calendar"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-      <ion-title>{{ title }}</ion-title>
+      <ion-button>
+        <ion-icon name="calendar"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
+  <ion-toolbar *ngIf="isSubPage">
+      <ion-buttons slot="start">
+          <ion-button (click)="goBack()">
+            <ion-icon name="arrow-back"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      <ion-title>{{ title }}</ion-title>
+    </ion-toolbar>
 </ion-header>
