creating folder and pages structure

--- a/src/app/movement/movement.page.html
+++ b/src/app/movement/movement.page.html
@@ -3,4 +3,4 @@
 <ion-content padding>
   <app-movements-list [movements]="movements"></app-movements-list>
 </ion-content>
-<app-floating-button></app-floating-button>
+<app-floating-button (emitExecuted)="onFloatingButtonClicked($event)"></app-floating-button>
